
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_4__ {int id; scalar_t__ name; } ;
struct TYPE_3__ {int id; scalar_t__ name; } ;


 int BAD_TRIP ;
 TYPE_2__* CVSROOTS ;
 int CVS_AUTH_FAILED ;
 int CVS_AUTH_SUCCESS ;
 int CVS_NO_USER ;
 int CVS_VERIF ;
 int DUMMY ;
 char* GOOD_TRIP ;
 TYPE_1__* USERNAMES ;
 char* flush_sock () ;
 int free (char*) ;
 int host ;
 int info (char*,...) ;
 int nclose () ;
 int nopen (int ,int ) ;
 int nprintf (int ,scalar_t__,scalar_t__,int ) ;
 scalar_t__ pass ;
 int port ;
 scalar_t__ root ;
 int scramble (int ) ;
 scalar_t__ strstr (char*,int ) ;
 scalar_t__ user ;

int brute_username(void)
{
    int i, c, ret = 0;
    char * rbuf;

    info("Bruteforcing cvs login... \n");
    for (c = 0; CVSROOTS[c].name; c++)
        {
            if (!root && CVSROOTS[c].id == -1) continue;
            for ( i=0; USERNAMES[i].name; i++ )
                {
                    if (root)
                        CVSROOTS[c].name = root;
                    info("Trying cvsroot = %s, login = %s\t", CVSROOTS[c].name,
                         USERNAMES[i].name);
                    nopen(host, port);
                    nprintf(CVS_VERIF, CVSROOTS[c].name, USERNAMES[i].name,
                            scramble(DUMMY));
                    rbuf = flush_sock();
                    nclose();
                    if ( strstr( rbuf, CVS_NO_USER))
                        info( BAD_TRIP, rbuf );
                    else if (strstr( rbuf, CVS_AUTH_FAILED) ||
                        strstr(rbuf, CVS_AUTH_SUCCESS))
                        {
                            info(GOOD_TRIP);
                            USERNAMES[i].id = CVSROOTS[c].id;
                            user = USERNAMES[i].name;
                            if (pass)
                                {
                                    free(rbuf);
                                    return (1);
                                }
                            ret++;
                        }
                    free(rbuf);
                }
            if (root)
                return (ret);
        }
    return (ret);
}
